<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/content_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/content_placeholder"
            android:textSize="@dimen/context_text_size"
            android:textColor="@color/textColor"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/content_date_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="On"
            android:textSize="@dimen/inner_text_size"
            android:textColor="@color/lightgray"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/date_placeholder"
            android:textSize="@dimen/inner_text_size"
            android:textColor="@color/lightgray"/>

        <View
            android:id="@+id/date_actual_separator"
            android:layout_width="1dp"
            android:layout_height="17dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/date_text"
            android:background="@color/lightgray"/>

        <TextView
            android:id="@+id/date_actual_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/date_actual_separator"
            android:text="@string/date_placeholder"
            android:textSize="@dimen/inner_text_size"
            android:textColor="@color/lightgray"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/date_placeholder"
            android:textSize="@dimen/inner_text_size"
            android:textColor="@color/lightgray"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/time_placeholder"
            android:textSize="@dimen/inner_text_size"
            android:textColor="@color/lightgray"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/repeat_img"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="2dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_repeat_on_gray"/>

        <TextView
            android:id="@+id/repeat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/repeat_img"
            android:layout_marginLeft="3dp"
            android:text="@string/repeat_placeholder"
            android:textSize="@dimen/inner_text_size"
            android:layout_centerInParent="true"
            android:textColor="@color/lightgray"/>

        <View
            android:id="@+id/repeat_persistent_separator"
            android:layout_width="1dp"
            android:layout_height="17dp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/repeat_text"
            android:background="@color/lightgray"/>

        <ImageView
            android:id="@+id/persistent_img"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/repeat_persistent_separator"
            android:src="@drawable/ic_pushpin_on_gray"/>

        <TextView
            android:id="@+id/persistent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_toRightOf="@id/persistent_img"
            android:text="@string/persistent_placeholder"
            android:textSize="@dimen/inner_text_size"
            android:layout_centerInParent="true"
            android:textColor="@color/lightgray"/>
    </RelativeLayout>

</LinearLayout>